# CPP_foundations

Calculator/: CMakeLists.txt  CMakePresets.json
Calculator/include/: advance_calc.hpp  simple_calc.hpp
Calculator/src/: advance_calc.cpp  simple_calc.cpp
Contacts/: CMakeLists.txt
Contacts/include/: user_input.hpp
Contacts/src/: main.cpp  user_input.cpp
